syntax = "proto3";

package mygame;

message Unit {
  string id = 1;
  string name = 2;
  uint32 health = 3;
  float accuracy = 4;
  float sight_range = 5;
  float movement_speed = 6;
  double lat = 7;
  double lon = 8;
  string unit_type = 9;
  UnitSide side = 10;
}

enum UnitSide {
  FRIENDLY = 0;
  ENEMY = 1;
}

enum SocketMessageType {
  WELCOME = 0;
  PING = 1;
  CHAT_MESSAGE = 2;
  UNIT_UPDATE = 3;
  GAME_COMMAND = 4;
  UNIT_LIST_REQUEST = 5;
  UNIT_LIST_RESPONSE = 6;
  DISCONNECT = 7;
}

message SocketMessage {
  SocketMessageType msg_type = 1;

  oneof payload {
    string text = 2;
    Unit unit = 3;
    string uuid = 4;
  }
}
